<resources>
    <string name="app_name">微信7.0红包插件</string>
    <string name="setting_name">高级配置</string>


    <string name="setting_title_necessary">必开选项</string>
    <string name="setting_open_accessibility_tip">已开启自动模拟点击服务</string>
    <string name="setting_close_accessibility_tip">检测到当前未开启模拟点击服务</string>
    <string name="setting_get_user_name_tip">已获取微信昵称</string>
    <string name="setting_lost_user_name_tip">检测到当前未获取微信昵称</string>
    <string name="setting_open_action">前往开启</string>
    <string name="setting_get_action">前往获取</string>
    <string name="setting_get_again_action">重新获取</string>
    <string name="setting_get_user_name_question">点击获取按钮前往微信，停留在【微信-首页】后程序自动获取微信昵称。获取成功后会自动提示</string>

    <string name="setting_accessibility_tip">开启自动模拟点击行为（必须）</string>
    <string name="setting_more_tip">插件正在运行...更多高级配置请点击右上角设置</string>

    <string name="setting_notification_tip">开启通知栏红包消息追踪</string>
    <string name="setting_get_self_tip">开启群聊抢自己发送的红包</string>
    <string name="setting_filter_tip">开启过滤特定关键字红包</string>
    <string name="setting_delay_tip">开启延迟服务</string>


    <string name="setting_user_name_tip">微信昵称, 用于支持过滤自身信息</string>
    <string name="setting_title_unnecessary">可选项</string>

    <string name="delay_type">延迟类型</string>
    <string name="delay_fixation_message">固定延迟毫秒数</string>
    <string name="delay_random_message">最大随机毫秒数(区间内随机延迟)</string>
    <string name="delay_edit">提交</string>
    <string name="delay_back">撤销</string>
    <string name="delay_none">无延迟</string>
    <string name="delay_fixation">固定延迟</string>
    <string name="delay_random">随机延迟</string>
    <string name="tag_commit">添加过滤</string>
    <string name="tag_empty_tip">请输入过滤内容</string>
    <string name="add_tag_tip">请添加过滤内容</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>


    <string name="app_description">By Yummylau</string>
    <string name="service_accessibility">微信红包插件</string>
    <string name="service_lable2">红包通知栏服务</string>
    <string name="main_activity_descr">
        注意：\n
        1、请把模拟操作和通知监听的权限打开。\n
        2、请取消锁屏密码。\n
        3、为了使服务可以持续在后台运行：\n
        （1）请设置本应用开机自启。\n
        （2）按菜单键，在弹出的后台程序管理窗口中给本应用加锁。\n
        4、在某些机型上，偶尔会出现卡在最后拆开红包界面的现象，请等待后续版本更新。\n
    </string>

    <style name="easy_dialog_style" parent="@android:style/Theme.Dialog">
        <item name="android:windowFrame">@null</item>
        <!-- 边框 -->
        <item name="android:windowIsFloating">true</item>
        <!-- 是否浮现在activity之上 -->
        <item name="android:windowIsTranslucent">true</item>
        <!-- 半透明 -->
        <item name="android:windowNoTitle">true</item>
        <!-- 无标题 -->
        <item name="android:windowBackground">@android:color/transparent</item>
        <!-- 背景透明 -->
        <item name="android:backgroundDimEnabled">true</item>
        <!-- 后面的activity变暗 -->
    </style>
</resources>
