<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="315dp"
    android:layout_height="wrap_content"
    android:background="@drawable/sh_common_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:paddingBottom="25dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="10dp"
            android:textColor="@color/text_primary_color"
            android:textSize="18sp"
            android:visibility="gone"
            android:text="@string/add_tag_tip"
            tools:text="关注成功"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dividerColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layout_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                tools:text="以后再说" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/dividerColor" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/layout_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/setting_tip_color"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
